# research_papers_search_bot

./: README.md  main.py  pyproject.toml  streamlit_app.py
.github/workflows/: on_push.yaml
research_papers_search_bot/: document_loader.py  retriever.py  vector_store.py
tests/: conftest.py  test_document_loader.py
