[tool.poetry]
name = "research-papers-search-bot"
version = "0.1.0"
description = "Semantic Search Bot for Research Papers"
authors = ["Lathashree H <lathashreeharish01@gmail.com>"]
readme = "README.md"
packages = [{include = "research_papers_search_bot"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
