[tool.poetry]
name = "research-papers-search-bot"
version = "0.1.0"
description = "Semantic Search Bot for Research Papers"
authors = ["Lathashree H <lathashreeharish01@gmail.com>"]
readme = "README.md"
packages = [{include = "research_papers_search_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.46.1"
langchain = "^0.3.26"
langchain-community = "^0.3.26"
sentence-transformers = "^5.0.0"
faiss-cpu = "^1.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
